# dcc

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Makefile  pyproject.toml
backend/src/dcc/: app.py  config.py
backend/src/dcc/api/routes/: agents.py  analytics.py  config.py  github.py  pipelines.py  sessions.py  workflows.py  workspaces.py
backend/src/dcc/db/: database.py  models.py  repository.py  seed.py
backend/src/dcc/engine/: agent_router.py  cli_runner.py  event_converter.py  gh_client.py  git_diff.py  monitor.py  pipeline_executor.py  plan_builder.py  stream_parser.py  types.py  workflow_templates.py
backend/src/dcc/workspace/: scanner.py  types.py
backend/tests/: test_agent_analytics.py  test_agent_registry.py  test_agent_router.py  test_analytics.py  test_config_scanner.py  test_event_converter.py  test_gh_client.py  test_git_detection.py  test_git_diff.py  test_history.py  test_mcp_scanner.py  test_monitor.py  test_pipeline_executor.py  test_pipelines_db.py  test_plan_builder.py  test_scanner.py  test_stream_parser.py  test_workflow_templates.py  test_workflows_api.py  test_workflows_db.py
docs/: ARCHITECTURE.md  ROADMAP.md  TECHNICAL_DECISIONS.md
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/actions/: shortcuts.ts
frontend/src/lib/components/: AgentCard.svelte  AgentDetail.svelte  AgentStatsTable.svelte  CategoryFilter.svelte  ConfigViewer.svelte  CostBadge.svelte  DelegationGraph.svelte  DiffViewer.svelte  (+26 more)
frontend/src/routes/: +layout.svelte  +page.svelte
(+32 files in other folders)
